apply multi module